# gaia-daemon

./: .design-preview.ts  .dockerignore  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CRITIQUE.md  Containerfile.gaia-agent  DESIGN.md  HANDOFF-CLAUDE-HARNESS.md  HANDOFF-CODEX-HARNESS.md  HANDOFF-MONAD-ENGINE.md  HANDOFF-NANOCLAW.md  HANDOFF-NEXT.md  HANDOFF-OPENFUGU-SETUPS.md  HANDOFF-SANDBOX.md  HANDOFF-SUMMONS-CODEX.md  HANDOFF-THANKS-DARIO.md  HANDOFF-UNIFY.md  HANDOFF-mobile-phone.md  HANDOFF.md  IMPLEMENTATION-PLAN.md  MEMORY-DESIGN.md  PLAN-CODEX-PI-SUMMONS-NO-MCP.md  Plan.md  README.md  REPLACEMENT.md  TODO.md  audit.md  memory-plan.md  package-lock.json  package.json  plan.md  plan2.md  tsconfig.json  tsconfig.v2.json  ui-plan.md
blueprint/gaia-pi-wrapper/: plan-gaia-pi-wrapper.md
docs/: CARYLL.md  IMPORT.md  REMOTE-STACK.md
docs/history/: HANDOFF-FUGU-REPRO.md  HANDOFF-NANOCLAW.md  HANDOFF-SANDBOX.md  MEMORY-DESIGN-v3.md
plugins/fugu/: README.md
scripts/: build-daemon.mjs  copy-assets.mjs  edge-proxy.mjs  gaia-engine.mjs  gaia-mobile.mjs  import-claude-export.ts  install-git-guards.mjs  lan-proxy.mjs  mint.ts  tunnel-up.mjs  tunnel-up.sh  voice-stack.sh
scripts/cf-worker/: README.md  wrangler.jsonc
scripts/git-hooks/: reference-transaction
setups/fugu/: setup.json
setups/fugu-trinity/: setup.json
setups/monad/: setup.json
src/: cli-harness.ts  cli.ts  daemon.ts
src-tauri/: Cargo.toml  Info.ios.plist  Info.plist  MOBILE.md  MODES.md  build.rs  tauri.conf.json  tauri.ios.conf.json
src-tauri/bundle/macos/: Info.plist
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/: notify.toml  open_window.toml  pet_progress.toml  redock.toml  set_badge.toml  sync_pets.toml
src-tauri/scripts/: make-app.sh
src-tauri/src/: cef_shell.rs  daemon_lifecycle.rs  debug_server.rs  lib.rs  main.rs
src-tauri/src/cef_shell/: mac.rs
src/agents/: registry.ts  scaffold.ts  types.ts
src/app/: commands.ts  editable-files.ts  gaia-app.ts  gaia-controller.ts  harness-bridge.ts  llm-proxy.ts  mode-router.ts  monad-engine.ts  monad-orchestrator.ts  pi-credential-resolver.ts  provider-key-env.ts  settings-hints.ts  summon-coordinator.ts  summon-manager.ts  summon-policy.ts  turn-runner.ts  upstream-resolver.ts  voice-bridge.ts  voice-settings.ts  voice-stack.ts  workspace-registry.ts
src/config/: config.ts  defaults.ts  types.ts
src/core/: attachments.ts  config.ts  daemon-client.ts  env.ts  http.ts  ids.ts  paths.ts  sqlite.ts  store.ts  tokens.ts  types.ts
src/domain/: accounts.ts  agents.ts  episodes.ts  facts.ts  git-guard.ts  memory-index.ts  memory.ts  pets.ts  recall.ts  roles.ts  rooms.ts  schedules.ts  skills.ts  workspace-index.ts  workspace.ts  worktree.ts
src/future/: artifacts.ts  web-search.ts
src/harness/: antigravity.ts  bridge-deps.ts  claude-thinking-proxy.ts  claude.ts  codex.ts  host.ts  index.ts  model-aliases.ts  model-label.ts  pi.ts  proc.ts  prompt.ts  protocol.ts  reaper.ts  runner-plugins.ts  runner.ts  sessions.ts  spec.ts  tools-pi.ts  tools.ts  usage.ts
src/lib/: daemon-client.ts  env.ts  fs.ts  ids.ts
src/memory/: memory-store.ts  recall.ts  render.ts
src/personas/: types.ts
src/pi/: resource-loader.ts  session-factory.ts
src/roles/: roles.ts
src/room/: room.ts  state.ts  summons.ts  transcript.ts
src/router/: mention-router.ts  types.ts
src/runtime/: agent-runner.ts  bridge-deps.ts  capabilities.ts  child-process.ts  circuit-breaker.ts  claude-runtime.ts  cli-entry.ts  codex-runtime.ts  event-stream.ts  (+10 more)
src2/: daemon.ts
test/: account-login.test.ts  accounts.test.ts  agent-create-route.test.ts  agent-runner.test.ts  agent-scaffold.test.ts  agents-registry.test.ts  bridge-deps.test.ts  caryll.test.ts  circuit-breaker.test.ts  claude-runtime.test.ts  claude-thinking-proxy.stall.test.ts  claude-thinking-proxy.test.ts  cli-harness.test.ts  cli-tools.test.ts  codex-runtime.test.ts  commands.test.ts  consolidate.test.ts  context-gate.test.ts  daemon-delete.test.ts  editable-files.test.ts  embeddings.test.ts  env.test.ts  facts-episodes.test.ts  gaia-controller.test.ts  git-guard.test.ts  harness-bridge.test.ts  harness-endpoint.test.ts  hints.test.ts  hooks.test.ts  http-background-tasks.test.ts  llm-proxy-integration.test.ts  llm-proxy.test.ts  mcp-config.test.ts  memory-eval.test.ts  memory-index.test.ts  memory-service.test.ts  memory-store.test.ts  model-aliases.test.ts  monad.test.ts  orphan-reaper.test.ts  (+43 more)
test2/: circuit-breaker.test.ts  claude-runtime.test.ts  codex-runtime.test.ts  commands.test.ts  hints.test.ts  monad.test.ts  orphan-reaper.test.ts  pi-runtime.test.ts  policies.test.ts  room-service.test.ts  rooms.test.ts  runner-host-proxy.test.ts  runner-host.test.ts  sandbox.test.ts  summons.test.ts  voice.test.ts
tools/: README.md
ui-test/: index.html
unmute/: .gitignore  CONTRIBUTING.md  README.md  SWARM.md  bake_deploy_prod.sh  docker-compose.yml  plan.md  pyproject.toml  session.md  swarm-deploy.yml
web/: index.html  pet.html  tsconfig.json
web2/: index.html
(+264 files in other folders)
