[package]
name = "gaia-shell"
version = "0.1.0"
description = "GAIA native shell (Tauri) — thin client for the local gaia daemon UI"
authors = ["GAIA"]
edition = "2021"
rust-version = "1.77"

# The lib is shared by the desktop entry point (main.rs) and the mobile
# entry points that tauri-ios / tauri-android generate. Keep run() here.
[lib]
name = "gaia_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# Native OS notifications (dock/notification-center banner when an agent turn
# finishes). Called from Rust via NotificationExt, so no plugin JS/ACL surface.
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cef = { version = "=149.3.0", optional = true, default-features = false, features = ["build-util"] }
semver = { version = "1", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
# WebKit (default) path — patch the WKUIDelegate so getUserMedia/mic works in the
# native app. Always built on macOS (the mic fix ships in the small build too).
objc2 = "0.6.4"
block2 = "0.6.2"
objc2-web-kit = { version = "0.3.2", features = ["block2", "objc2-app-kit", "WKFrameInfo", "WKSecurityOrigin", "WKUIDelegate", "WKWebView"] }
# CEF path — extra AppKit/Foundation bindings for the Chromium shell (cef-only).
objc2-app-kit = { version = "0.3.2", default-features = false, optional = true, features = [
    "NSApplication",
    "NSEvent",
] }
objc2-foundation = { version = "0.3.2", optional = true }

[features]
default = ["webkit"]
# Small/iOS-compatible Tauri path: native system webview (WKWebView on macOS).
webkit = ["tauri/custom-protocol"]
# Bundled Chromium path. CEF is optional so the default WebKit build never pulls it.
cef = ["dep:cef", "dep:semver", "dep:objc2-app-kit", "dep:objc2-foundation"]

[package.metadata.cef.bundle]
helper_name = "gaia-cef-helper"

[[bin]]
name = "gaia-cef-helper"
path = "src/bin/gaia-cef-helper.rs"
required-features = ["cef"]

[[bin]]
name = "gaia-cef-bundle"
path = "src/bin/gaia-cef-bundle.rs"
required-features = ["cef"]
